Fix description white space

--- a/css/beer_1.1.css
+++ b/css/beer_1.1.css
@@ -91,6 +91,7 @@
 {
 	max-height: 8em;
 	padding-right: .8em;
+	white-space: pre-line;
 }
 
 .title-rate-and-description
